# Mikktspace.NET

./: .gitignore  README.md  azure-pipelines.yml
CSharp/: Mikktspace.NET.csproj  Mikktspace.NET.nuspec  Mikktspace.NET.sln  Mikktspace.cs  MikktspaceContext.cs  Native.cs  NativeTypes.cs
Native/: BUILD.md  CMakeLists.txt
Native/jni/: Android.mk  Application.mk  Makefile.srcs
Native/src/: dll_exports.h  mikktspace_api.cpp  mikktspace_api.h
